--- a/index.html
+++ b/index.html
@@ -353,6 +353,28 @@ divserzeugen();
         <br/>
     </div></b>
 <font color="black" face="Iceland">
+	<font size="2px"><br/>
+  Redirecting to Portfolio after <span id="countdown">17</span> seconds
+</font>
+<!-- JavaScript part -->
+<script type="text/javascript">
+    // Total seconds to wait
+    var seconds = 17;
+    function countdown() {
+        seconds = seconds - 1;
+        if (seconds < 0) {
+            // Chnage your redirection link here
+            window.location = "http://www.mrismanaziz.my.id/";
+        } else {
+            // Update remaining seconds
+            document.getElementById("countdown").innerHTML = seconds;
+            // Count down using javascript
+            window.setTimeout("countdown()", 1000);
+        }
+    }
+    // Run countdown function
+    countdown();
+</script>
 <font size="1"><br>
 <font face="Iceland"><p >
 
