--- a/epb/exp.html
+++ b/epb/exp.html
@@ -49,7 +49,7 @@
 		<body>
 			<tr style="background: #003399; color: #fff; ">
 				<td colspan="7">
-				<h3 style="text-align: center; margin-top: 10px;"><strong>Kalkulator Exp Char Point Blank</strong></h4></td>
+				<h3 style="text-align: center; margin-top: 10px;"><strong>Kalkulator Exp Char Point Blank Evolved</strong></h4></td>
 			</tr>
 			<tr>
 				<td>Pangkat Sekarang </td><td>:</td>
