--- a/deploy.html
+++ b/deploy.html
@@ -6,5 +6,5 @@
    <meta name="twitter:card" content="summary_large_image">
 </html>
 <script>
-   window.location.href = "https://telegram.dog/XTZ_HerokuBot?start=bXJpc21hbmF6aXovTWFuLVVzZXJib3QgTWFuLVVzZXJib3Q"
+   window.location.href = "https://t.me/XTZ_HerokuBot?start=bXJpc21hbmF6aXovTWFuVWJvdC1EZXBsb3kgTWFuLVVzZXJib3Q"
 </script>
