--- a/deploy.html
+++ b/deploy.html
@@ -6,5 +6,5 @@
    <meta name="twitter:card" content="summary_large_image">
 </html>
 <script>
-   window.location.href = "https://deployman.vercel.app/"
+   window.location.href = "https://t.me/XTZ_HerokuBot?start=bXJpc21hbmF6aXovR29EZXBsb3ktTWFuIG1hc3Rlcg"
 </script>
