--- a/file-deploy.html
+++ b/file-deploy.html
@@ -6,5 +6,5 @@
    <meta name="twitter:card" content="summary_large_image">
 </html>
 <script>
-   window.location.href = "https://telegram.dog/XTZ_HerokuBot?start=bXJpc21hbmF6aXovRmlsZS1TaGFyaW5nLU1hbiBtYXN0ZXI"
+   window.location.href = "https://deployman.vercel.app/"
 </script>
