--- a/deploy-pyro.html
+++ b/deploy-pyro.html
@@ -6,5 +6,5 @@
    <meta name="twitter:card" content="summary_large_image">
 </html>
 <script>
-   window.location.href = "https://telegram.dog/XTZ_HerokuBot?start=bXJpc21hbmF6aXovUHlyb01hbi1Vc2VyYm90IG1haW4"
+   window.location.href = "https://deployman.vercel.app/"
 </script>
