--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       </div>
       </b>
       <font color="black" face="Iceland">
-      <!-- JavaScript part -->
+      <!-- JavaScript part 
       <script type="text/javascript">
          // Total seconds to wait
          var seconds = 0;
@@ -361,6 +361,7 @@
          // Run countdown function
          countdown();
       </script>
+      -->
       <font size="1"><br>
       <font face="Iceland">
       <p >
